feat: Update site images, refine CSS styles, and enhance mobile menu and carousel accessibility.

--- a/estilo/base.css
+++ b/estilo/base.css
@@ -183,11 +183,11 @@ main {
 }
 
 .card-meta .orange.material-symbols-outlined {
-    color: orange;
+    color: #8F0000;
 }
 
 .card-meta .material-symbols-outlined.red {
-    color: red;
+    color: #2B00FF;
 }
 
 h1,
