--- a/estilo/base.css
+++ b/estilo/base.css
@@ -113,6 +113,13 @@ html {
     max-width: 100vw;
 }
 
+@media (max-width: 500px) {
+    html {
+        word-break: break-all;
+    }
+}
+
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     color: var(--color-text-main);
